<resources>
    <string name="app_name">MobileApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_sc">MainActivitySC</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_shop">MainActivityShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_main_admin">MainActivityAdmin</string>
    <string name="title_activity_main_test">MainActivityTest</string>
    <string name="categories">Categories</string>
    <string name="products">Products</string>
    <string name="no_image">No Image</string>
    <string name="no_products">No products added in the cart</string>
    <string name="cart_empty">Cart Empty</string>
    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="amount">Amount:</string>
    <string name="description">Description:</string>
    <string name="admin">Admin</string>
</resources>