<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_categories">

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.tayyab.mobileapp.ui.shop.ShopFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.tayyab.mobileapp.ui.cart.CartFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tayyab.mobileapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>